src/test/ui/feature-gate-wasm_custom_section.stderr
error[E0658]: attribute is currently unstable
  --> $DIR/feature-gate-wasm_custom_section.rs:11:1
   |
LL | #[wasm_custom_section = "foo"] //~ ERROR: attribute is currently unstable
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(wasm_custom_section)] to the crate attributes to enable

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0658"
